# EAL_Embedded

./: .gitignore  readme.txt
arm/: CMakeLists.txt
arm/ek-lm3s6965/: CMakeLists.txt  makedefs  toolchain-ek-lm3s6965.cmake
arm/ek-lm3s6965/Win_CCS/ADC&TIMERS/: .ccsproject  .project  main.c  startup_ccs.c
arm/ek-lm3s6965/basic/: CMakeLists.txt  README.md
arm/ek-lm3s6965/basic/eclipse_setups/: c-project-settings.xml
arm/ek-lm3s6965/basic/tryADC/: .cproject  .project
arm/ek-lm3s6965/basic/tryArm/: readme.txt
arm/ek-lm3s6965/basic/tryButtons/: .cproject  .project
arm/ek-lm3s6965/basic/tryButtonsSleep/: .cproject
arm/ek-lm3s6965/basic/tryBuzzer/: .cproject
arm/ek-lm3s6965/basic/tryI2C_master_slave/: .project
arm/ek-lm3s6965/basic/tryOLED/: .cproject  .project
arm/ek-lm3s6965/basic/trySysTickTimer/: .cproject  .project  CMakeLists.txt
arm/ek-lm3s6965/basic/tryUART/: .cproject
arm/ek-lm3s6965/basic/tryUART_Send/: .cproject  .project
arm/ek-lm3s6965/projects/Auto_PWMRegulater/: .ccsproject  .cproject  .project  control.c  control.h  main.c  startup_ccs.c  statemashine.c  statemashine.h
arm/ek-lm3s6965/projects/Can_Bus/: .ccsproject  .cproject  .project  Stellaris LM3S9B92.ccxml  lm3s9b92.cmd  main.c  startup_ccs.c
arm/ek-lm3s6965/projects/Led_Project/: .cproject  .project  Control.c  Control.h  Functions.c  Functions.h  Led.c  Led.h  main.c
arm/ek-lm3s6965/setup_instructions/: building_arm  debugging_arm
arm/ek-lm3s6965/simple/: CMakeLists.txt
arm/luminary/setup_instructions/: .project  building_arm  debuggin_arm  debugging_arm
(+208 files in other folders)
